networkpolicy/inter-namespace/ns_cassandra.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: cassandra
  labels:
    ns: cassandra
    zone: db
spec: {}
status: {}
