networkpolicy/inter-namespace/ns_web.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: web
  labels:
    zone: web
spec: {}
status: {}
