networkpolicy/inter-namespace/pod_cassandra.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: cassandra
  name: cassandra
  namespace: cassandra
spec:
  containers:
  - image: nginx
    name: cassandra
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
