networkpolicy/inter-namespace/svc_backend.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: backend
  name: backend
  namespace: web
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: backend
status:
  loadBalancer: {}
