networkpolicy/inter-namespace/svc_frontend.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: frontend
  name: frontend
  namespace: web
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: frontend
status:
  loadBalancer: {}
